# rs-auth-ai

./: Cargo.toml  README.md
src/: config.rs  db.rs  errors.rs  main.rs
src/ai/: README.md  handlers.rs  mod.rs  routes.rs  service.rs
src/ai/providers/: mod.rs  tongyi.rs
src/auth/: README.md  auth_handlers.rs  mod.rs  routes.rs  utils.rs
src/auth/oauth/: facebook.rs  google.rs  mod.rs  models.rs
src/models/: ai.rs  mod.rs  user.rs
src/service/: redis_service.rs
