[package]
name = "rs-auth-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
actix-multipart = "0.6"
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
base64 = "0.21"
argon2 = "0.5.0"
rand = "0.8.5"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
mongodb = "2.5.0"
futures = "0.3.28"
thiserror = "1.0.40"
reqwest = { version = "0.11", features = ["json"] }
actix-cors = "0.7"
redis = { version = "0.27", features = ["tokio-comp"] }