[package]
name = "rs-auth-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
actix-multipart = "0.6"
actix-web = "4.3.1"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3.28"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
base64 = "0.21"
argon2 = "0.5.0"
rand = "0.8.5"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "chrono", 
    "uuid", 
    "json"
] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.27", features = ["tokio-comp"] }
thiserror = "1.0.40"